--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -72,3 +72,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+*::-webkit-scrollbar {
+  display: none;
+}
