--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 @import './stars.css';
 #app {
-  max-width: 1280px;
+  width: 100vw;
   height: 100vh;
   margin: 0 auto;
   font-weight: normal;
