--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,8 +30,16 @@ a {
 .v-leave-active {
   transition: opacity 2s ease;
 }
+.fast-enter-active,
+.fast-leave-active {
+  transition: opacity .5s ease;
+}
 
 .v-enter-from,
 .v-leave-to {
+  opacity: 0;
+}
+.fast-enter-from,
+.fast-leave-to {
   opacity: 0;
 }
